2012-10-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_push_boundary): Don't use strcmp to
	check if the boundary is an mbox boundary, use a direct pointer
	comparison so that we can handle Content-Type boundary parameters
	with a value of "From "

2012-10-19  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-parser.c (parser_step_headers): Don't assume that
	the first non-header line we find indicates the start of the
	content unless we've already gotten some basic headers.

	Fix for bug #686223.

2012-10-18  Jeffrey Stedfast  <jeff@xamarin.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.11

2012-09-12  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Unref the
	certificate after adding it to the list (adding it to the list
	refs it).

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_decrypt): If the 'result' out param is
	null, unref the GMimeDecryptResult to avoid leaking.

2012-08-13  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-utils.c (tokenize_rfc2047_phrase): Don't forget to
	initialize 'ascii' to TRUE.

2012-08-05  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-stream-pipe.c (stream_flush): Pipes and sockets
	cannot be fsync()'d, so don't even try!

2012-08-05  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-utils.c (rfc2047_token_new_encoded_word): Make sure
	to properly handle broken encoded-word tokens in the form:
	=?charset?q?=.

	Fixes the g_malloc abort() in bug #679388

2012-08-05  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-multipart-signed.c (check_protocol_supported): Oops,
	need to compare against xsupported in the second string compare.

	Fixes bug #674032

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.10

2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/Makefile.am: Always build gmime-gpg-context.[c,h] and